--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProjetoBuzzfeed</title>
+  <title>Buzzfeed</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <app-root></app-root>
+  <header>
+    Buzzfeed Style
+  </header>
+  <div class="container">
+    <div class="card">
+      <h2>Título da Matéria</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+      <a href="#" class="btn">Leia mais</a>
+    </div>
+    <div class="card">
+      <h2>Outro Destaque</h2>
+      <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+      <a href="#" class="btn">Saiba mais</a>
+    </div>
+  </div>
 </body>
 </html>
